// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findValidSession should find and validate session 1`] = `
Session {
  "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_agent": Object {
    "browser": null,
    "geoIp": null,
    "os": null,
    "platform": null,
    "source": null,
    "version": null,
  },
  "_authenticated": true,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": null,
    "email": "email@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": null,
    "redirectUri": "https://redirect.uri/",
    "responseType": "code",
  },
  "_clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "agent": Object {
          "browser": null,
          "geoIp": null,
          "os": null,
          "platform": null,
          "source": null,
          "version": null,
        },
        "authenticated": true,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": null,
          "email": "email@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": null,
          "redirectUri": "https://redirect.uri/",
          "responseType": "code",
        },
        "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
        "deviceId": null,
        "expires": 2099-01-01T00:00:00.000Z,
        "grantType": "email_otp",
        "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "scope": "default edit openid",
      },
    },
  ],
  "_expires": 2099-01-01T00:00:00.000Z,
  "_grantType": "email_otp",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_scope": "default edit openid",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`findValidSession should find and validate session 2`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [
        Object {
          "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "agent": Object {
            "browser": null,
            "geoIp": null,
            "os": null,
            "platform": null,
            "source": null,
            "version": null,
          },
          "authenticated": true,
          "authorization": Object {
            "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "codeMethod": "sha256",
            "deviceChallenge": null,
            "email": "email@lindorm.io",
            "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
            "otpCode": null,
            "redirectUri": "https://redirect.uri/",
            "responseType": "code",
          },
          "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
          "created": 2020-01-01T07:00:00.000Z,
          "deviceId": null,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "session_created",
              "payload": Object {
                "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
                "agent": Object {
                  "browser": null,
                  "geoIp": null,
                  "os": null,
                  "platform": null,
                  "source": null,
                  "version": null,
                },
                "authenticated": true,
                "authorization": Object {
                  "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
                  "codeMethod": "sha256",
                  "deviceChallenge": null,
                  "email": "email@lindorm.io",
                  "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
                  "otpCode": null,
                  "redirectUri": "https://redirect.uri/",
                  "responseType": "code",
                },
                "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
                "deviceId": null,
                "expires": 2099-01-01T00:00:00.000Z,
                "grantType": "email_otp",
                "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
                "scope": "default edit openid",
              },
            },
          ],
          "expires": 2099-01-01T00:00:00.000Z,
          "grantType": "email_otp",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "scope": "default edit openid",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`findValidSession should throw error when authorizationId is wrong 1`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`findValidSession should throw error when clientId is wrong 1`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`findValidSession should throw error when deviceId is wrong 1`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`findValidSession should throw error when grantType is wrong 1`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`findValidSession should throw error when subject is wrong 1`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
